--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         
     </div>
 
-    <div id="pagination" class="container pagem"></div>
+    <div id="pagination" class="container pagination__container"></div>
    
 
     <script src="assets/js/app.js"></script>
